# fastapi-base-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
alembic/: env.py
alembic/versions/: 0001_create_items_table.py  0002_create_auth_tables.py
docs/: api-versioning.md  ci-cd.md  database.md  deployment.md  observability.md  production-checklist.md  security.md
docs/adr/: 0001-architecture.md
scripts/: init.sh  run-production.sh
src/__PROJECT_SLUG__/: __init__.py  main.py
src/__PROJECT_SLUG__/api/v1/: router.py
src/__PROJECT_SLUG__/api/v1/features/auth/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
src/__PROJECT_SLUG__/core/: config.py  errors.py  logging.py  otel.py  readiness.py
src/__PROJECT_SLUG__/core/db/: __init__.py  models.py  session.py
src/__PROJECT_SLUG__/core/metrics/: __init__.py  http.py
src/__PROJECT_SLUG__/core/middleware/: body_size.py  rate_limit.py  request_id.py  security_headers.py  tenant.py  timeout.py
src/__PROJECT_SLUG__/core/security/: __init__.py  auth.py
src/__PROJECT_SLUG__/health/: router.py
tests/: conftest.py
tests/db/: conftest.py  test_auth_repository.py  test_items_concurrency.py  test_items_repository.py  test_migrations.py
tests/integration/: test_auth.py  test_docs.py  test_errors.py  test_health.py  test_items.py  test_middleware.py  test_ping.py
tests/unit/: test_auth.py  test_config.py  test_items_service.py  test_metrics.py  test_rate_limit.py  test_rate_limit_backends.py  test_resilience_middleware.py
(+7 files in other folders)
