[tool.poetry]
name = "__PROJECT_SLUG__"
version = "0.1.0"
description = "__DESCRIPTION__"
authors = ["__OWNER__"]
readme = "README.md"
packages = [{ include = "__PROJECT_SLUG__", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.30" }
pydantic-settings = "^2.3"
structlog = "^24.4"
httpx = "^0.27"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.24"
ruff = "^0.8"
black = "^24.4"
pyright = "^1.1"
pre-commit = "^3.7"
coverage = { extras = ["toml"], version = "^7.6" }
pytest-cov = "^6.0"

[tool.poetry.group.otel]
optional = true

[tool.poetry.group.otel.dependencies]
opentelemetry-sdk = "^1.20"
opentelemetry-instrumentation-fastapi = ">=0.40b0"
opentelemetry-instrumentation-httpx = ">=0.40b0"
opentelemetry-exporter-otlp-proto-grpc = "^1.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"src/*/core/otel.py" = ["I001"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
